<resources>
    <string name="app_name">Tongan</string>

    <!-- Login / Create account -->
    <string name="button_sign_in">Sign In</string>
    <string name="i_don_t_have_an_account">Don\'t have an account? </string>
    <string name="already_have_an_account">Already have an account? </string>

    <string name="create_account">Sign Up</string>
    <string name="progress_dialog_loading">Loading</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase</string>
    <string name="google_error_auth_with_google">google Auth error</string>
    <string name="google_error_network_error">google network error</string>
    <string name="google_error_recoverable_oauth_error">google Oauth error</string>
    <string name="oauth2_format">oauth2:%s</string>

    <!-- General -->
    <string name="password_hint">Enter Password</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="log_out">Log Out</string>
    <string name="category_basics">Basics</string>
    <string name="add_stuff">Add Stuff</string>
    <string name="title_activity_add_entry">Add Entry</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="english">English</string>
    <string name="preaching_skills">Preaching Skills</string>
    <string name="category_preaching">Preaching Skills</string>
    <string name="category_teaching">Teaching Skills</string>
    <string name="category_other">Other</string>
    <string name="tongan">Tongan</string>

    <string-array name="categories_array">
        <item>Basics</item>
        <item>Preaching Skills</item>
        <item>Teaching Skills</item>
        <item>Other</item>
    </string-array>

    <string-array name="basics_array">
        <item>Tense Markers</item>
        <item>Sentence Structure</item>
        <item>Goodbyes</item>
        <item>Vocabulary</item>
        <item>Numbers</item>
        <item>Family</item>
        <item>Colors</item>
    </string-array>

    <string-array name="preaching_array">
        <item>Greetings and Introductions</item>
        <item>Language</item>
        <item>After the Greeting</item>
        <item>Presenting a Topic</item>
        <item>Asking Questions</item>
        <item>Using the Bible</item>
        <item>Questions About Specific Topics</item>
        <item>Using Literature</item>
        <item>Using Electronic Devices</item>
        <item>Offering Literature</item>
        <item>Offering to Return</item>
        <item>Return Visits</item>
        <item>Offering a Bible Study</item>
        <item>Public Witnessing</item>
    </string-array>

    <string-array name="teaching_array">
        <item>Books of the Bible</item>
        <item>Useful Words and Phrases About the Bible</item>
        <item>Talking About the Contents of the Bible</item>
        <item>Introducing Scriptures</item>
        <item>After Reading a Scripture</item>
        <item>Types of Literature</item>
        <item>Sections of Literature</item>
        <item>Reading</item>
        <item>Teaching</item>
        <item>Learning</item>
        <item>Reasoning and Thinking</item>
        <item>Communication</item>
        <item>Meetings</item>
        <item>Useful Words and Phrases for Meetings</item>
        <item>The Life and Ministry Meeting</item>
        <item>Items and Assignments</item>
        <item>Bible Studies and Discussions</item>
        <item>Demonstrations, Interviews and Experiences</item>
        <item>Conducting Meetings for Field Service</item>
        <item>Simple Announcments</item>
        <item>Introducing Songs and Prayers</item>
        <item>Giving Encouragement and Commendation</item>
    </string-array>

    <string-array name="other_array">
        <item>Theocratic Vocab</item>
        <item>Social</item>
        <item>Vocab</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name_hint">Name: Sione Smith</string>
    <string name="collections">Collections</string>
    <string name="share">Share</string>
    <string name="tutorials">Tutorials</string>
    <string name="title_activity_collections">Collections</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="title_activity_tutorials">Tutorials</string>
    <string name="new_collection">Enter new collection title.</string>
    <string name="title">Title</string>
    <string name="title_activity_collection_list">CollectionListActivity</string>


    <!--Tutorials Titles-->
    <string-array name="tutorial_titles">
        <item>Getting Started</item>
        <item>Grammar</item>
    </string-array>
    <!--Getting Started Content-->
    <string name="getting_started_paragraph_1">
        Pronunciation and spelling are phonemic. That is, they are spelled how they are pronounced and vice
        versa. There are no silent letters or complex rules for pronunciation. Bellow you will find
        the Tongan alphabet, their pronunciations, and some general rules of thumb.
    </string>
    <string name="vowels">Vowels</string>
    <string name="tongan_vowels">
    <b>a</b> as in father \n\n
    <b>e</b> as in met \n\n
    <b>i</b> as in machine \n\n
    <b>o</b> as in corn \n\n
    <b>u</b> as in boot
    </string>

    <string name="consonants">
        Consonants
    </string>

    <string name="tongan_consonants">
        <b>f</b> as in father \n\n
        <b>h</b> as in hand \n\n
        <b>k</b> as in kabob \n\n
        <b>l</b> as in large \n\n
        <b>m</b> as in mars \n\n
        <b>n</b> as in nachos \n\n
        <b>ng</b> as in singer \n\n
        <b>p</b> as in pad \n\n
        <b>s</b> as in sat \n\n
        <b>t</b> as in time \n\n
        <b>v</b> as in very \n\n
        <b>\'</b> glottal stop
    </string>

    <string name="getting_started_paragraph_2">
        Here are a few things to remember. All consonants are separated by a vowel, and all words end in a vowel. This is especially good to
        remember for words that have been \"Tonganized\". For instance, <i>website</i> is translated to <i>uepisaiti</i>. However it is acceptable
        to leave out the <i>i</i> separating the <i>p</i> and <i>s</i> when saying the word out loud. \n\n

        It is important to sound out each vowel individually when they are grouped together. Notice the differences below.
    </string>

    <string name="vowel_contrasts_1">
        <b>i</b> and <b>e</b> contrasts: \n\n
        feitu\'u = place \n
        fetu\'u = star \n\n

        vai = water \n
        vae = divide \n\n

        toi = hide \n
        toe = again
    </string>

    <string name="vowel_contrasts_2">
        <b>u</b> and <b>o</b> contrasts: \n\n
        lao = law \n
        lau = read \n\n

        tao = spear \n
        tau = we \n\n

        vao = forrest \n
        vau = to shred
    </string>

    <string name="getting_started_paragraph_3">
        All vowels have a short and long form. The long form has a toloi (macron) over the vowel.
        The length of the vowel can change the entire meaning of the word.
    </string>

    <string name="length_contrasts_1">
        langa = to build \nlangā = to be in labor with child \n\npato = duck \npatō = a thump \n\npulu = cow \npulū = blue
    </string>

    <string name="length_contrasts_2">
        pepe = butterfly \npēpē = baby \n\nkaka = to climb \nkakā = parrot \nkākā = deceit
    </string>

    <string name="getting_started">Getting Started</string>

</resources>
