<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.slowthecurry.mycahh.learning.TutorialLesson">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/getting_started_title"
            style="@style/ListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_started" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/getting_started_pp1"
            style="@style/Paragraphs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_started_paragraph_1" />

        <TextView
            style="@style/ListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vowels" />

        <TextView
            style="@style/Bullets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tongan_vowels" />

        <TextView
            style="@style/ListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consonants" />

        <TextView
            style="@style/Bullets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tongan_consonants" />

        <TextView
            style="@style/Paragraphs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_started_paragraph_2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Bullets"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vowel_contrasts_1" />

            <TextView
                style="@style/Paragraphs"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vowel_contrasts_2" />
        </LinearLayout>

        <TextView
            style="@style/Paragraphs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_started_paragraph_3" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Bullets"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/length_contrasts_1" />

            <TextView
                style="@style/Bullets"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/length_contrasts_2" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
