<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.slowthecurry.mycahh.learning"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/cardview_dark_background"
    tools:context="com.slowthecurry.mycahh.learning.LoginActivity">

    <LinearLayout
        android:id="@+id/linear_layout_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edit_text_password"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgrey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgrey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_with_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginBottom="@dimen/lv_header_text_size"
            android:background="@color/colorPrimary"
            android:text="@string/button_sign_in"
            android:textColor="@android:color/white" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/divider"
                android:text="@string/i_don_t_have_an_account" />

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/LoginCreateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSignUpPressed"
                android:text="@string/create_account" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>